<resources>
    <string name="app_name">Photo Blog</string>
    <string name="your_email_address">Email Address...</string>
    <string name="your_password">Password...</string>
    <string name="login_to_account">Login to account</string>
    <string name="need_a_new_account">Need A New Account?</string>
    <string name="photo_blog">Photo Blog</string>
    <string name="welcome_to">Welcome to</string>
    <string name="action_search">Search</string>
    <string name="account_setting">Account Setting</string>
    <string name="Logout">Logout</string>
    <string name="welcome_register">Create a new Account</string>
    <string name="register_button_text">Create Account</string>
    <string name="already_have_account_button_text">Already have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="display_name_two">Display Name</string>
    <string name="save_account_settings">Save Account Settings</string>
    <string name="add_description">Add Description</string>
    <string name="post_blog">Post Blog</string>
    <string name="todo">TODO</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="notification">Notification</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username_b">Username</string>
    <string name="blog_post_date_b">Blog Post Date</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, mucius explicari ei eam, et choro accusam has, id pro habemus splendide.</string>
    <string name="username_blog">Username</string>
    <string name="blog_post_date_blog">Blog Post Date</string>
    <string name="lorem_ipsum_dolor_sit_amet_soluta_regione_urbanitas_vis_in_qui_elit_populo_ut">Lorem ipsum dolor sit amet, soluta regione urbanitas vis in, qui elit populo ut.</string>
    <string name="todo_todo">TODO</string>
    <string name="blog_like_button">blog like button</string>
    <string name="_0_likes">0</string>
    <string name="comments">Comments :</string>
    <string name="comment_name">Name</string>
    <string name="dialog_text">No Internet Connection</string>
    <string name="commnet_text">Commnet</string>
    <string name="comment_hint">Your comment...</string>
    <string name="display_name_2">Display Name</string>
    <string name="posts">Posts</string>
    <string name="dhaka_bangladesh">Dhaka,Bangladesh</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="_100">100</string>
    <string name="network">You are not connected to the internet. Please turn on wifi or mobile data to continue on Photo Blog</string>
</resources>
