<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@drawable/profile"
        android:layout_height="match_parent">

        <!-- TODO: Update blank fragment layout -->
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/account_profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/image_placeholder"
            app:civ_border_color="#cccccc"
            app:civ_border_width="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/account_display_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:lineSpacingExtra="8sp"
            android:text="@string/display_name_2"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/account_email_address"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/account_country_name"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/dhaka_bangladesh"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toEndOf="@+id/account_profile_image"
            app:layout_constraintTop_toBottomOf="@+id/account_email_address" />

        <TextView
            android:id="@+id/account_email_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/example_gmail_com"
            android:textColor="#ffffff"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/account_profile_image"
            app:layout_constraintTop_toBottomOf="@+id/account_display_name" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/post_image_list"
            android:layout_width="match_parent"
            android:layout_height="440dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/total_number_of_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="8dp"
            android:text="@string/_100"
            android:textColor="#ffffff"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account_profile_image" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/posts"
            android:textColor="#ffffff"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/total_number_of_post" />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>